2006-01-02  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.13.0.4: 
	* NEWS, configure.ac: Updated
	* docs/C/gdm.xml: Updated version/date.

2005-12-24  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter.c: Now set greeter_probably_login_prompt to
	  FALSE if we get a Password request as a GDM_NOECHO message.  This
	  makes GDM smarter about when it is at the Username prompt and
	  fixes bug #320738, which was causing GDM to just login as the
	  timed user when the password was requested - which it should not
	  do.  It should only log in immediately as the timed user if ENTER
	  is hit from the login screen without actually typing in a username.
	* gui/gdmlogin.c: Removed some syslog debug messages I accidently
	  left there.
	* docs/C/gdm.xml: Now mention that if the user hits just ENTER
	  when TimedLoginEnable is on, that GDM will just login immediately
	  as the timed user.  This is how GDM has always behaved, just was
	  not documented.
	* gui/greeter/greeter_session.c, gui/greeter/greeter_system.c:
	  Removed syslog.h include since it isn't used in these files.
	* daemon/server.c: Fixed comments.
	* daemon/slave.c: Fixed comments.

2005-12-24  Brian Cameron  <brian.cameron@sun.com>

	Happy holidays.  Some bug fixes.

	* daemon/gdm.h, daemon/gdmconfig.c, daemon/slave.c,
	  gui/gdmlogin.c, gui/greeter/greeter_item_timed.c:
	  Fix so that timed/automatic enable is checked and 
	  automatic/timed login is only turned on if they are
	  enabled.  Fix so greeters restart if timed login is
	  changed in gdmsetup.  Fixes bug #324337.
	* gui/gdmcommon.c, gui/gdmlogin.c, gui/greeter/greeter.c,
	  gui/greeter/greeter_item.c, gui/greeter/greeter_parser.c:
	  Now gdmlogin and gdmcommon use the same character sequences
	  with Welcome/RemoteWelcome messages.  Fixes bug #322711.
	* docs/C/gdm.xml: Document how character sequences work with text
	  labels and Welcome/RemoteWelcome messages.
	* gui/gdmcommon.[ch], gui/gdmchooser.c,