@@ -2,7 +2,7 @@ AC_PREREQ(2.52)
 AC_INIT(daemon/gdm.h)
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(gdm,2.13.0.3)
+AM_INIT_AUTOMAKE(gdm,2.13.0.4)
 AC_CONFIG_MACRO_DIR([m4])
 AM_MAINTAINER_MODE
 
