@@ -2,6 +2,7 @@
 
 	* Release 2.13.0.4: 
 	* NEWS, configure.ac: Updated
+	* config/Makefile.am: Corrected make distcheck issue.
 	* docs/C/gdm.xml: Updated version/date.
 
 2005-12-24  Brian Cameron  <brian.cameron@sun.com>
